fixes on table block / alignfull media&text correctly

--- a/assets/styles/blocks/_media_and_text.scss
+++ b/assets/styles/blocks/_media_and_text.scss
@@ -2,48 +2,11 @@
  * Media & text block
  */
 
-.wp-block-media-text {
-  @include make-row();
-  align-items: center;
-  justify-content: center;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-
-  @include add-block-vertical-aligns();
-
-  @include media-breakpoint-up(md) {
-    margin-right: auto;
-    margin-left: auto;
-  }
-
-  .wp-block-media-text__media {
-    @include make-col-ready();
-
-    @include media-breakpoint-up(md) {
-      @include make-col(6);
+.gutenberg {
+  .wp-block-media-text {
+    &.alignfull {
+      margin-left: -15px;
+      margin-right: -15px;
     }
   }
-
-  .wp-block-media-text__content {
-    @include make-col-ready();
-
-    @include media-breakpoint-up(md) {
-      @include make-col(6);
-    }
-  }
-
-  &.has-media-on-the-right {
-    .wp-block-media-text__media {
-      order: 2;
-    }
-
-    .wp-block-media-text__content {
-      order: 1;
-    }
-  }
-
-  > figure {
-    margin: 1rem 0;
-  }
-
 }
